Inventories: export with backend++

--- a/templates/search/inventories.jade
+++ b/templates/search/inventories.jade
@@ -97,9 +97,15 @@ table.table.table-striped.table-hover
           button.btn.btn-success.dropdown-toggle(type="button", data-toggle="dropdown") {% trans "Export" %}...
             span.caret
           ul.dropdown-menu
-            li: a(href="{{ inv.id }}/export?report=bill&format=csv") {% trans "Sells" %} - csv
-            li: a(href="{{ inv.id }}/export?report=listing&format=csv") {% trans "Full list" %} - csv
-            li: a(href="{{ inv.id }}/export?report=simplelisting&format=csv") {% trans "isbn and quantities (Dilicom)" %} - csv
+            li: a(href="/inventories//inventories/{{ inv.id }}/export?report=bill&format=pdf", title='{% trans "Get the list of the cards sold with their quantity" %}') {% trans "Sells" %} - pdf
+
+            li: a(href="/inventories/{{ inv.id }}/export?report=bill&format=csv") {% trans "Sells" %} - csv
+
+            li: a(href="/inventories/{{ inv.id }}/export?report=listing&format=csv") {% trans "Full list" %} - csv
+
+            li: a(href="/inventories/{{ inv.id }}/export?report=listing&format=pdf") {% trans "Full list" %} - pdf
+
+            li: a(href="/inventories/{{ inv.id }}/export?report=simplelisting&format=csv") {% trans "isbn and quantities (Dilicom)" %} - csv
 
         a(href="{{ inv.id }}/delete")
           button.btn.btn-danger {% trans "Delete" %}
