--- a/templates/pdftemplates/pdf-barcode.jade
+++ b/templates/pdftemplates/pdf-barcode.jade
@@ -34,16 +34,16 @@ head
             th
           th {% trans "Title" %}
           th {% trans "Price" %}
-          th {% trans "Quantity" %}
+          th {{ quantity_header }}
 
       tbody
-        for card in cards_qties
+        for card_qty in cards_qties
           tr
             if barcode
-              td <pdf:barcode value="{{ card.0.isbn }}" type="ean13" humanreadable="1" align="baseline" />
-            td {{ forloop.counter }} - {{ card.0.title }}
-            td(style='{text-align: center;}') {{ card.0.price }} €
-            td(style='{text-align: center;}') {{ card.1 }}
+              td <pdf:barcode value="{{ card_qty.0.isbn }}" type="ean13" humanreadable="1" align="baseline" />
+            td {{ forloop.counter }} - {{ card_qty.0.title }}
+            td(style='{text-align: center;}') {{ card_qty.0.price }} €
+            td(style='{text-align: center;}') {{ card_qty.1 }}
         endfor
 
       tfoot
