--- a/templates/search/to_command.jade
+++ b/templates/search/to_command.jade
@@ -46,7 +46,9 @@ div(ng-cloak, ng-controller="basketToCommandController")
      button.btn.btn-success.dropdown-toggle(type="button", data-toggle="dropdown", type="button", aria-haspopup="true", aria-expanded="false", title="{% trans 'Export the list to the required format' %}") {% trans "Export" %}
        span.caret
      ul.dropdown-menu
-       li: a(href="/baskets/1/export?format=csv&report=simplelisting") {% trans "isbn and quantity (Dilicom)" %} - csv
+       li: a(href="/baskets/1/export?format=txt&report=simplelisting", title='{% trans "Export the list of all cards to command in txt format." %}') {% trans "Listing" %} - txt
+
+       li: a(href="/baskets/1/export?format=csv&report=simplelisting", title='{% trans "Export the list of all cards to command in a csv, suitable for LibreOffice and to give to other services, like Dilicom." %}') {% trans "isbn and quantity (Dilicom)" %} - csv
 
     .col-md-6
     .col-md-5
