--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -89,7 +89,7 @@ div(ng-cloak, ng-controller="basketsController")
        button.btn.btn-default(type="button", ng-click="showing_notes = ! showing_notes", title='{% trans "Show your notes (n)" %}')
          i.glyphicon.glyphicon-pencil
 
-       a(href="http://abelujo.cc/docs/lists/", target="_blank"): button.btn.btn-default(href="http://abelujo.cc/docs/inventories/", title='{% trans "Read the documentation" %}')
+       a(href="http://abelujo.cc/docs/lists/", target="_blank"): button.btn.btn-default(title='{% trans "Read the documentation" %}')
          i.glyphicon.glyphicon-question-sign
 
    .col-md-2
