--- a/templates/search/to_command.jade
+++ b/templates/search/to_command.jade
@@ -51,6 +51,9 @@ div(ng-cloak, ng-controller="basketToCommandController")
        li: a(href="/baskets/1/export?format=csv&report=simplelisting", title='{% trans "Export the list of all cards to command in a csv, suitable for LibreOffice and to give to other services, like Dilicom." %}') {% trans "isbn and quantity (Dilicom)" %} - csv
 
     .col-md-6
+       a(href="http://abelujo.cc/docs/commands/", target="_blank"): button.btn.btn-default(title='{% trans "Read the documentation" %}')
+          i.glyphicon.glyphicon-question-sign
+
     .col-md-5
       div {% trans "Total" %}: {{'super_total_copies()'|ng}} {% trans "copies" %}, {{'super_total_price()'|ng}} €
 
