--- a/templates/search/inventory_view.jade
+++ b/templates/search/inventory_view.jade
@@ -27,50 +27,56 @@ div(ng-controller="inventoryNewController")
   h3 {% trans "Inventory of " %} {{ 'cur_inv' | ng }}
   div {{ 'alerts ' | ng }}
   form(method="get")
-    .row
-      .col-md-9
-        div
-          | {% trans "You did "%} {{ 'progress_current' | ng }} %.
-          | {% trans "It remains" %} {{ 'total_missing' |ng }} {% trans "non-inventoried cards in the stock." %}
-
-        div.progress
-          div.progress-bar.progress-bar-info(role="progress-bar"
-            aria-valuenow="{{ progress_current }}"
-            aria-valuemin="0"
-            aria-valuemax="100"
-            ng-style="progressStyle"
-            title="Inventory: {{ progress_current }}% done") {{ 'progress_current ' | ng }}
-            span.sr-only {{ 'progress_current ' | ng }}
-
-       .col-md-3
-         btn.btn.btn-success(ng-click="terminate()") {% trans "Analyse…" %}
-         a(href="http://abelujo.cc/docs/inventories/", target="_blank")
-           btn.btn.btn-default( title='{% trans "Read the documentation" %}')
-             i.glyphicon.glyphicon-question-sign
 
     .row
-     .col-lg-9
-      p.input-group
-          input.nullable.form-control(
-            type='text'
-            typeahead-loading="loadingCards"
-            ng-model='{% verbatim %}copy_selected{% endverbatim %}'
-            uib-typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
-            typeahead-min-length="3"
-            typeahead-on-select="add_selected_card($item)"
-            title="{% trans 'Use TAB to validate your choice, Enter to proceed.'%}"
-            id="default-input"
-            placeholder='{% trans "Search any isbn, search by keywords in your stock" %}'
-          )
+      .col-lg-7
+       .row
+        p.input-group
+            input.nullable.form-control(
+                type='text'
+                typeahead-loading="loadingCards"
+                ng-model='{% verbatim %}copy_selected{% endverbatim %}'
+                uib-typeahead='{% verbatim %} copy.repr for copy in getCards($viewValue, card_type_id) {% endverbatim %}'
+                typeahead-min-length="3"
+                typeahead-on-select="add_selected_card($item)"
+                title="{% trans 'Use TAB to validate your choice, Enter to proceed.'%}"
+                id="default-input"
+                placeholder='{% trans "Search any isbn, search by keywords in your stock" %}'
+            )
 
-          span.input-group-btn
-            button.btn.btn-default(type='button')
-              i.glyphicon.glyphicon-search
+            span.input-group-btn
+                button.btn.btn-default
+                    i.glyphicon.glyphicon-search
+       .row
+        .col-md-10
+         .col-md-2
+           btn.btn.btn-success(ng-click="terminate()") {% trans "Analyse…" %}
+         .col-md-1
+           a(href="http://abelujo.cc/docs/inventories/", target="_blank")
+              btn.btn.btn-default( title='{% trans "Read the documentation" %}')
+               i.glyphicon.glyphicon-question-sign
 
-     .col-lg-3
+         .col-lg-3
+          input(type="checkbox", ng-model="showAll", ng-change="setCardsToShow()")
+          span(ng-click="toggleCardsToShow()") {% trans "Show all cards inventoried" %}
 
-        input(type="checkbox", ng-model="showAll", ng-change="setCardsToShow()")
-        span(ng-click="toggleCardsToShow()") {% trans "Show all cards inventoried" %}
+
+      .col-md-5
+            div
+              ul
+                li {% trans "Total value" %}: {{ 'total_value' | ng }} €
+                li {% trans "It remains" %} {{ 'total_missing' |ng }} {% trans "non-inventoried cards in the stock." %}
+                li {% trans "You did "%} {{ 'progress_current' | ng }} %.
+                  div.progress
+                    div.progress-bar.progress-bar-info(role="progress-bar"
+                      aria-valuenow="{{ progress_current }}"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                      ng-style="progressStyle"
+                      title="Inventory: {{ progress_current }}% done") {{ 'progress_current ' | ng }}
+                      span.sr-only {{ 'progress_current ' | ng }}
+
+
 
   div(ng-show="cards_to_show.length > 0")
    table.table.table-condensed(datatable="ng")
@@ -78,10 +84,18 @@ div(ng-controller="inventoryNewController")
         tr
           th {% trans "Title" %}
           th {% trans "Author" %}
+          th {% trans "Price" %}
           th {% trans "Quantity" %}
           th
 
     tbody
+        tr
+          td {% trans "Total" %}
+          td
+          td {{'total_value'|ng}}
+          td
+          td
+
         tr.repeated-item(ng-show="cards_to_show", ng-repeat="card in cards_to_show")
 
          td.col-md-6
@@ -92,6 +106,8 @@ div(ng-controller="inventoryNewController")
             ng-show="{% verbatim %} cards_to_show[$index].ambiguous_sell {% endverbatim %}"
             title="{% trans 'There is a conflict with deposits.' %}")
           i.glyphicon.glyphicon-exclamation-s
+
+         td.col-md-1 {{ 'card.price' | ng }}  €
 
          td.col-md-1
             p.input-group
