Angular i18n for stat monthly revenu's datepicker popup
Needs more polishing though:
- the first month name we see isn't translated.
- seems to work with a fr or es page, but not for en or de, they display
fr, the default (see app.js for the config)

not a priority right now imo.

for #40

--- a/templates/search/dashboard.jade
+++ b/templates/search/dashboard.jade
@@ -91,7 +91,7 @@ div(ng-controller="dashboardController", ng-cloak="stats")
 
 
     .row.panel.panel-info
-       h3.panel.panel-heading {% trans "Best 10 sells of this month" %}
+       h3.panel.panel-heading {% trans "Best 10 sells of the month" %}
        div.panel.panel-body
          div(ng-show="sells_month.best_sells.length")
            table.table.table-striped(st-table="sells_month")
