--- a/search/static/search/style.css
+++ b/search/static/search/style.css
@@ -69,10 +69,10 @@
 /*
   We're using CSS transitions for when
   the enter and move events are triggered
-  for the element that has the .repeated-item
+  for the element that has the .my-animated-item
   class
 */
-.repeated-item.ng-enter, .repeated-item.ng-move {
+.my-animated-item.ng-enter, .my-animated-item.ng-move {
   -webkit-transition:0.5s linear all;
   -moz-transition:0.5s linear all;
   -o-transition:0.5s linear all;
@@ -86,17 +86,17 @@
  are set so that the animation knows what to
  animate.
 */
-.repeated-item.ng-enter.ng-enter-active,
-.repeated-item.ng-move.ng-move-active {
+.my-animated-item.ng-enter.ng-enter-active,
+.my-animated-item.ng-move.ng-move-active {
   opacity:1;
 }
 
 /*
   We're using CSS keyframe animations for when
   the leave event is triggered for the element
-  that has the .repeated-item class
+  that has the .my-animated-item class
 */
-.repeated-item.ng-leave {
+.my-animated-item.ng-leave {
   -webkit-animation:0.5s my_animation;
   -moz-animation:0.5s my_animation;
   -o-animation:0.5s my_animation;
