--- a/templates/search/inventories.jade
+++ b/templates/search/inventories.jade
@@ -58,58 +58,70 @@ div(ng-controller="InventoryModalController")
 
   button.btn.btn-primary(ng-click="open('lg')") {% trans "New" %}
 
-table.table.table-striped.table-hover(ng-controller="inventoriesController")
-  thead
-   tr
-    th.mouse-pointer(ng-click="sort_by('created')") {% trans "Created the" %}
-      span.caret
-    th.mouse-pointer(ng-click="sort_by('name')") {% trans "Inventory of..." %}
-      span.caret
-    th.mouse-pointer(ng-click="sort_by('progress')") {% trans "Progress" %}
-      span.caret
-    th.mouse-pointer(ng-click="sort_by('nb_cards')") {% trans "Nb of titles/copies" %}
-      span.caret
-    th.mouse-pointer(ng-click="sort_by('value')") {% trans "Value" %}
-      span.caret
-    th.mouse-pointer(ng-click="sort_by('applied')")(title='{% trans "Was this inventory already applied to your stock ?" %}') {% trans "Applied ?" %}
-      span.caret
-    th
+div(ng-controller="inventoriesController")
+  div
+    uib-alert(
+      ng-repeat="alert in alerts"
+      type="{{ 'alert.level' | ng }}"
+      close="closeAlert($item)"
+      ng-click="closeAlert($item)"
+    )
+      {{ 'alert.message' | ng }}
 
-  tbody
-    tr.my-animated-item(ng-repeat="inv in inventories")
-      td {{ 'inv.created'|ng  }}
-      td: a(href="{{ 'inv.get_absolute_url'|ng }}") {{ 'inv.name'|ng }}
-      td {{ 'inv.progress'|ng  }} %
-      td {{ 'inv.nb_cards'|ng  }} / {{ 'inv.nb_copies'|ng  }}
-      td(title='{% trans "Value of all the copies in this inventory" %}') {{ 'inv.value'|ng  }} €
+  table.table.table-striped.table-hover
 
-      td.i.glyphicon.glyphicon-ok(title="already applied", ng-if="inv.applied")
-      td(ng-if="! inv.applied")
+    thead
+     tr
+      th.mouse-pointer(ng-click="sort_by('created')") {% trans "Created the" %}
+        span.caret
+      th.mouse-pointer(ng-click="sort_by('name')") {% trans "Inventory of..." %}
+        span.caret
+      th.mouse-pointer(ng-click="sort_by('progress')") {% trans "Progress" %}
+        span.caret
+      th.mouse-pointer(ng-click="sort_by('nb_cards')") {% trans "Nb of titles/copies" %}
+        span.caret
+      th.mouse-pointer(ng-click="sort_by('value')") {% trans "Value" %}
+        span.caret
+      th.mouse-pointer(ng-click="sort_by('applied')")(title='{% trans "Was this inventory already applied to your stock ?" %}') {% trans "Applied ?" %}
+        span.caret
+      th
 
-      td
-        .btn-group
-          button.btn.btn-primary.dropdown-toggle(type="button", data-toggle="dropdown") {% trans "Action" %}...
-            span.caret
-          ul.dropdown-menu
-            li: a(href="/inventories/{{ 'inv.id'|ng  }}") {% trans "Continue" %}
-            li: a(href="/inventories/{{ 'inv.id'|ng  }}/terminate/") {% trans "Analyse" %}
-            li: a(href="#", ng-click="validate( $index )", title='{% trans "Apply this inventory to your stock. This will modify your stock" %}') {% trans "Apply to your stock" %}
-            li.divider(role="separator")
-            li: a(href="/inventories/{{ 'inv.id'|ng  }}/delete") {% trans "Delete" %}
+    tbody
+      tr.my-animated-item(ng-repeat="inv in inventories")
+        td {{ 'inv.created'|ng  }}
+        td: a(href="{{ 'inv.get_absolute_url'|ng }}") {{ 'inv.name'|ng }}
+        td {{ 'inv.progress'|ng  }} %
+        td {{ 'inv.nb_cards'|ng  }} / {{ 'inv.nb_copies'|ng  }}
+        td(title='{% trans "Value of all the copies in this inventory" %}') {{ 'inv.value'|ng  }} €
 
-        .btn-group
-          button.btn.btn-success.dropdown-toggle(type="button", data-toggle="dropdown") {% trans "Export" %}...
-            span.caret
-          ul.dropdown-menu
-            li: a(href="/inventories/{{ 'inv.id'|ng  }}/export?report=bill&format=pdf", title='{% trans "Get the list of the cards sold with their quantity" %}') {% trans "Sells" %} - pdf
+        td.i.glyphicon.glyphicon-refresh(title="{% trans 'the inventory is being applied' %}", ng-if="inv.ongoing")
+        td.i.glyphicon.glyphicon-ok(title="{% trans 'already applied' %}", ng-if="inv.applied")
+        td(ng-if="(! inv.applied) && (! inv.ongoing)")
 
-            li: a(href="/inventories/{{ 'inv.id'|ng  }}/export?report=bill&format=csv") {% trans "Sells" %} - csv
+        td
+          .btn-group
+            button.btn.btn-primary.dropdown-toggle(type="button", data-toggle="dropdown") {% trans "Action" %}...
+              span.caret
+            ul.dropdown-menu
+              li: a(href="/inventories/{{ 'inv.id'|ng  }}") {% trans "Continue" %}
+              li: a(href="/inventories/{{ 'inv.id'|ng  }}/terminate/") {% trans "Analyse" %}
+              li: a(href="#", ng-click="validate( $index )", title='{% trans "Apply this inventory to your stock. This will modify your stock" %}') {% trans "Apply to your stock" %}
+              li.divider(role="separator")
+              li: a(href="/inventories/{{ 'inv.id'|ng  }}/delete") {% trans "Delete" %}
 
-            li: a(href="/inventories/{{ 'inv.id'|ng  }}/export?report=listing&format=csv") {% trans "Full list" %} - csv
+          .btn-group
+            button.btn.btn-success.dropdown-toggle(type="button", data-toggle="dropdown") {% trans "Export" %}...
+              span.caret
+            ul.dropdown-menu
+              li: a(href="/inventories/{{ 'inv.id'|ng  }}/export?report=bill&format=pdf", title='{% trans "Get the list of the cards sold with their quantity" %}') {% trans "Sells" %} - pdf
 
-            li: a(href="/inventories/{{ 'inv.id'|ng  }}/export?report=listing&format=pdf") {% trans "Full list" %} - pdf
+              li: a(href="/inventories/{{ 'inv.id'|ng  }}/export?report=bill&format=csv") {% trans "Sells" %} - csv
 
-            li: a(href="/inventories/{{ 'inv.id'|ng  }}/export?report=simplelisting&format=csv") {% trans "isbn and quantities (Dilicom)" %} - csv
+              li: a(href="/inventories/{{ 'inv.id'|ng  }}/export?report=listing&format=csv") {% trans "Full list" %} - csv
+
+              li: a(href="/inventories/{{ 'inv.id'|ng  }}/export?report=listing&format=pdf") {% trans "Full list" %} - pdf
+
+              li: a(href="/inventories/{{ 'inv.id'|ng  }}/export?report=simplelisting&format=csv") {% trans "isbn and quantities (Dilicom)" %} - csv
 
 
 {% endblock content %}
