--- a/templates/search/inventories.jade
+++ b/templates/search/inventories.jade
@@ -95,7 +95,7 @@ div(ng-controller="inventoriesController")
         td(title='{% trans "Value of all the copies in this inventory" %}') {{ 'inv.value'|ng  }} €
 
         td.i.glyphicon.glyphicon-refresh(title="{% trans 'the inventory is being applied' %}", ng-if="inv.ongoing")
-        td.i.glyphicon.glyphicon-ok(title="{% trans 'already applied' %}", ng-if="inv.applied")
+        td.i.glyphicon.glyphicon-ok(title="{{'inv.closed'|ng}}", ng-if="inv.applied")
         td(ng-if="(! inv.applied) && (! inv.ongoing)")
 
         td
